--- a/README.Rmd
+++ b/README.Rmd
@@ -18,8 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of promptimus is to provide a set of functions to support prompting to LLMs in R.
-
+The goal of promptimus is to provide a set of functions to prompt generation for you to supply to LLMs in R.
 
 ## Installation
 
@@ -38,8 +37,19 @@ This is a basic example which shows you how to solve a common problem:
 library(promptimus)
 
 # Use RTF (role then task then format) framework to generate a prompt
-rtf("life coach with 30 years of experience in mentoring", "plan to improve my work-life balance", "table")
-
+x <- rtf(
+  role = "life coach with 30 years of experience in mentoring",   
+  task = "plan to improve my work-life balance", 
+  format = "table"
+)
+strwrap(x, width = 80)
 # Use Chain of Thought framework to generate a prompt
-chain_of_thought("How do I improve my sales calls? I've only got a 15% close rate right now, and I think it's because I'm not selling the dream enough.")
+x <- chain_of_thought(
+  instructions = "How do I improve my sales calls? I've only got a 15% close rate right now, and I think it's because I'm not selling the dream enough."
+)
+strwrap(x, width = 80)
 ```
+
+# Credit
+
+- [fewshot()](R/fewshot.R) is taken from [{promptr}](https://github.com/joeornstein/promptr) originally written by [Joe Ornstein](https://github.com/joeornstein).
